--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 		<link href="vendor/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
 
         <!-- Main Stylesheet File -->
+        <link href="css/hover-style.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
     </head>
 
@@ -366,5 +367,17 @@
         </div>
         <!-- Footer Section End -->
 
+        <!-- Vendor JavaScript File -->
+        <script src="vendor/jquery/jquery.min.js"></script>
+        <script src="vendor/jquery/jquery-migrate.min.js"></script>
+        <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+        <script src="vendor/wow/wow.min.js"></script>
+        <script src="vendor/slick/slick.min.js"></script>
+		<script src="vendor/tempusdominus/js/moment.min.js"></script>
+        <script src="vendor/tempusdominus/js/moment-timezone.min.js"></script>
+        <script src="vendor/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
+        
+        <!-- Main Javascript File -->
+        <script src="js/main.js"></script>
     </body>
 </html>
