--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>NATURE | Responsive Photography Template</title>
+        <title>Josephine Wilson Photography</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="" name="keywords">
         <meta content="" name="description">
@@ -52,12 +52,12 @@
                 </div>
 
                 <div class="col-md-12">
-                    <h1>Responsive Photography Template</h1>
+                    <h1>Natural Family Portraiture</h1>
 
                     <p class="tagline">
-                        Duis turpis non ornare vitae mollis lorem.
+                        Josephine Wilson Photography
                     </p>
-                    <a class="btn" data-toggle="popover" data-container="body" data-placement="top" data-html="true" id="download"><i class="fa fa-download"></i>Free Download</a>
+                    <!--<a class="btn" data-toggle="popover" data-container="body" data-placement="top" data-html="true" id="download"><i class="fa fa-download"></i>Free Download</a>
                     <div id="popover-content-download">
                         <form>
                             <ul class="list-group">
@@ -87,7 +87,7 @@
                                 </li>
                             </ul>
                         </form>
-                    </div>
+                    </div>-->
                 </div>
             </div>
         </div>
@@ -96,9 +96,9 @@
         <!-- About Section Start -->
         <div id="about">
             <div class="container">
-                <div class="section-header">
+                <!--<div class="section-header">
                     <h2>BIO</h2>
-                </div>
+                </div>-->
                 <div class="row">
                     <div class="col-md-6 img-cols">
                         <div class="img-col">
@@ -111,14 +111,14 @@
                     </div>
                     <div class="col-md-6 content-cols">
                         <div class="content-col content-col-1">
-                            <h3>Lorem ipsum dolor</h3>
+                            <h3>About Me</h3>
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam fringilla justo justo. Proin sodales bibendum pharetra. Aliquam blandit sapien eu nisl dictum pretium. Proin ac orci et ipsum vehicula rutrum eget eu ex.
                             </p>
                             <p>
                                 Nam fringilla justo justo. Proin sodales bibendum pharetra. Aliquam blandit sapien eu nisl dictum pretium. Proin ac orci et ipsum vehicula rutrum eget.
                             </p>
-                            <a href="">Learn More</a>
+                            <!--<a href="">Learn More</a>-->
                         </div>
                     </div>
                 </div>
