--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     </div>
                     <div class="col-md-6 content-cols">
                         <div class="content-col content-col-1">
-                            <h3>About Me</h3>
+                            <h2>About Me</h2>
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam fringilla justo justo. Proin sodales bibendum pharetra. Aliquam blandit sapien eu nisl dictum pretium. Proin ac orci et ipsum vehicula rutrum eget eu ex.
                             </p>
@@ -546,15 +546,15 @@
         <div id="footer">
             <div class="container">
                 <div class="row">
-                    <div class="col-12">
+                    <!--<div class="col-12">
                         <div class="social">
                             <a href=""><li class="fa fa-instagram"></li></a>
                             <a href=""><li class="fa fa-twitter"></li></a>
                             <a href=""><li class="fa fa-facebook-f"></li></a>
                         </div>
-                    </div>
+                    </div>-->
                     <div class="col-12">
-                        <p>Copyright &#169; <a href="#">Your Site Name</a> All Rights Reserved.</p>
+                        <p>Copyright &#169; <a href="#">Josephine Wilson Photography</a> All Rights Reserved.</p>
 						
 						<!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
 						<p>Designed By <a href="https://htmlcodex.com">HTML Codex</a></p>
