--- a/index.html
+++ b/index.html
@@ -111,7 +111,9 @@
                     </div>
                     <div class="col-md-6 content-cols">
                         <div class="content-col content-col-1">
-                            <h2>About Me</h2>
+                            <div class="section-header">
+                    <h2>About Me</h2>
+                </div>
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam fringilla justo justo. Proin sodales bibendum pharetra. Aliquam blandit sapien eu nisl dictum pretium. Proin ac orci et ipsum vehicula rutrum eget eu ex.
                             </p>
