--- a/index.html
+++ b/index.html
@@ -96,14 +96,14 @@
         <!-- About Section Start -->
         <div id="about">
             <div class="container">
-                <!--<div class="section-header">
+                <div class="section-header">
                     <h2>BIO</h2>
-                </div>-->
+                </div>
                 <div class="row">
                     <div class="col-md-6 img-cols">
                         <div class="img-col">
                             <div class="img">
-                                <div class="box7">
+                                <div>
                                     <img src="img/about.jpg">
                                 </div>
                             </div>
@@ -111,9 +111,8 @@
                     </div>
                     <div class="col-md-6 content-cols">
                         <div class="content-col content-col-1">
-                            <div class="section-header">
-                    <h2>About Me</h2>
-                </div>
+                            <h2>About Me</h2>
+          
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam fringilla justo justo. Proin sodales bibendum pharetra. Aliquam blandit sapien eu nisl dictum pretium. Proin ac orci et ipsum vehicula rutrum eget eu ex.
                             </p>
