--- a/index.html
+++ b/index.html
@@ -578,6 +578,6 @@
         <script src="vendor/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
         
         <!-- Main Javascript File -->
-        <script src="js/main.js"></script>
+        <!--<script src="js/main.js"></script>-->
     </body>
 </html>
