--- a/index.html
+++ b/index.html
@@ -331,16 +331,17 @@
         <div id="subscribe">
             <div class="container">
                 <div class="section-header">
-                    <h2>Submit your email address below</h2>
+                    <h2>Contact Me</h2>
                 </div>
                 <div class="row">
                     <div class="col-12">
-                        <div class="subscribe-form">
+			<p>josephine.h.wilson@gmail.com</p>
+                        <!--<div class="subscribe-form">
                             <form>
                                 <input type="email" required="required" placeholder="Enter your email here" />
                                 <button>submit</button>
                             </form>
-                        </div>
+                        </div>-->
                     </div>
                 </div>
             </div>
