--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
         <script src="vendor/jquery/jquery.min.js"></script>
         <script src="vendor/jquery/jquery-migrate.min.js"></script>
         <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-        <script src="vendor/wow/wow.min.js"></script>
+        <!--<script src="vendor/wow/wow.min.js"></script>-->
         <!--<script src="vendor/slick/slick.min.js"></script>-->
 		<script src="vendor/tempusdominus/js/moment.min.js"></script>
         <script src="vendor/tempusdominus/js/moment-timezone.min.js"></script>
