--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
         <!-- Portfolio Section End -->
 
         <!-- Subscribe Section Start -->
-        <div id="subscribe">
+        <div id="portfolio">
             <div class="container">
                 <div class="section-header">
                     <h2>Contact Me</h2>
