--- a/index.html
+++ b/index.html
@@ -293,13 +293,7 @@
                 </div>
                 <div class="row">
                     <div class="col-12">
-			<p>josephine.h.wilson@gmail.com</p>
-                        <!--<div class="subscribe-form">
-                            <form>
-                                <input type="email" required="required" placeholder="Enter your email here" />
-                                <button>submit</button>
-                            </form>
-                        </div>-->
+			<p>Email: josephine.h.wilson@gmail.com</p>
                     </div>
                 </div>
             </div>
