--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <div class="img-col">
                             <div class="img">
                                 <div class="box7">
-                                    <img src="img/about.jpg">
+                                    <img src="img/websiteheadshot.jpg">
                                 </div>
                             </div>
                         </div>
